<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true"
    app:strokeColor="@android:color/transparent"
    app:cardPreventCornerOverlap="true"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/item_card_training_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/training_type_label"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/item_card_training_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/training_duration_label"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/item_card_training_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/training_date_label"
            android:layout_marginTop="4dp"
            android:textAppearance="?attr/textAppearanceBody2" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>