<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.training.TrainingEditingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Текстовое поле для типа тренировки -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/training_type_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/training_type_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/training_type_label"
                android:textColorHint="#546E7A" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Текстовое поле для продолжительности тренировки -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/training_duration_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/training_type_input"
            app:startIconDrawable="@drawable/schedule_24px">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/training_duration_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/training_duration_label"
                android:textColorHint="#546E7A" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Текстовое поле для даты -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/training_date_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/training_duration_input"
            app:startIconDrawable="@drawable/event_available_24px">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/training_date_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/training_date_label"
                android:inputType="date"
                android:textColorHint="#546E7A" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- кнопка сохранения -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/training_date_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>