<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.exercise.ExerciseCreatingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Текстовое поле для названия тренировки -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/exercise_name_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/exercise_name_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/exercise_name_label"
                android:textColorHint="#546E7A" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Текстовое поле для описания упражнения -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/exercise_description_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exercise_name_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/exercise_description_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/exercise_description_label"
                android:textColorHint="#546E7A" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- кнопка сохранения -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exercise_description_input"
            android:text="@string/save_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>