<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.exercise.ExerciseViewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Карточка типа тренировки -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/material_card_view_exercise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:cardElevation="1dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Тип тренировки -->
                <TextView
                    android:id="@+id/exercise_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise_name_label"
                    android:textSize="17sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Карточка продолжительности тренировки -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/material_card_view_exercise_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:cardElevation="1dp"
            android:layout_marginTop="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/material_card_view_exercise_name"
            app:strokeColor="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Продолжительность тренировки -->
                <TextView
                    android:id="@+id/exercise_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise_description_label"
                    android:textSize="17sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Карточка даты тренировки -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/material_card_view_exercise_date_edited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            app:cardElevation="1dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/material_card_view_exercise_description"
            app:strokeColor="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Дата тренировки -->
                <TextView
                    android:id="@+id/exercise_date_edited"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise_date_edited_label"
                    android:textSize="17sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>